<resources>
    <string name="app_name">7MinuteWorkOut</string>

    <string name="text">7minuteWorkout</string>
    <string name="image">image</string>
    <string name="Exercise_Image">image</string>
    <string name="str_start">START</string>
    <string name="Upcoming">UPCOMING EXERCISE:</string>
    <string name="end">END</string>

    <string name="back_button">Are you sure?</string>
    <string name="dialog_description">This will stop your workout and\n
        the progress will not be saved!</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>

    <string name="bmi">BMI</string>
    <string name="bmi_calculator">Calculator</string>
    <string name="str_History">History</string>

    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>

    <string name="height_ft">Height (ft)</string>
    <string name="height_in">Height (In)</string>
    <string name="weight_lbs">Weight (lbs)</string>

    <string name="Units_Metric">METRIC UNITS</string>
    <string name="Units_US">US UNITS</string>

    <string name="your_bmi">YOUR BMI</string>
    <string name="tool_value">00.00</string>
    <string name="tool_range">BMI Type</string>
    <string name="tool_comment">Congratulations! You are a weirdo!</string>
    <string name="calculate_bmi">CALCULATE</string>

    <string name="List_Workouts">Previous Workouts</string>


</resources>
