<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/back_button"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_description"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_yes"
            android:textColor="@color/ColorWhite"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_no"
            android:textColor="@color/ColorWhite"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>



</LinearLayout>