<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".calcActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/ColorWhite"/>

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_bmi_activity"
        android:layout_margin="10dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:checked="true"
            android:text="@string/Units_Metric"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"/>

        <RadioButton
            android:id="@+id/rUSUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:checked="false"
            android:text="@string/Units_US"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/llUnitsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgUnits"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiMetricUnitWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorBlack"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                android:hint="@string/weight_kg"
                android:textColorHint="@color/ColorGray"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiMetricUnitHeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricUnitHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorBlack"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                android:hint="@string/height_cm"
                android:textColorHint="@color/ColorGray"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiUSUnitWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUSUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorBlack"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                android:hint="@string/weight_lbs"
                android:textColorHint="@color/ColorGray"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llUsUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiUSUnitHeight_Ft"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUSUnitHeight_Ft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ColorBlack"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:hint="@string/height_ft"
                    android:textColorHint="@color/ColorGray"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiUSUnitHeight_In"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUSUnitHeight_In"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ColorBlack"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:hint="@string/height_in"
                    android:textColorHint="@color/ColorGray"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llUnitsView"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

       <TextView
           android:id="@+id/tvYourBMI"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/your_bmi"
           android:textAllCaps="true"
           android:textSize="20sp"
           android:textColor="@color/ColorDarkGray" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="@string/tool_value"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/ColorDarkGray"/>

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="@string/tool_range"
            android:textSize="24sp"
            android:textColor="@color/ColorDarkGray"/>

        <TextView
            android:id="@+id/tvBMIComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="@string/tool_comment"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/ColorDarkGray"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculateMetricUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDisplayBMIResult"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:text="@string/calculate_bmi"
        android:textColor="@color/ColorWhite"
        android:textSize="24sp"
        android:textStyle="bold"/>


</RelativeLayout>